--- a/public/index.html
+++ b/public/index.html
@@ -22,27 +22,27 @@
       </div>
       <div class="content">
         <div class="general-info">
-          <div class="status">Enter a location</div>
-          <div class="location">To find the weather</div>
+          <div class="status" data-status>Enter a location</div>
+          <div class="location" data-location>To find the weather</div>
         </div>
         <div class="detail-section">
           <div class="detail">
             <div class="title">
               wind
             </div>
-            <div class="value">TBD</div>
+            <div class="value" data-wind>TBD</div>
           </div>
           <div class="detail">
             <div class="title">
               Temperature
             </div>
-            <div class="value">TBD</div>
+            <div class="value bordered" data-temperature>TBD</div>
           </div>
           <div class="detail">
             <div class="title">
               Precipitation
             </div>
-            <div class="value">TBD</div>
+            <div class="value" data-precipitation>TBD</div>
           </div>
         </div>
         <div class="city-search-container">
