displayed the fetched data

--- a/public/index.html
+++ b/public/index.html
@@ -32,11 +32,11 @@
             </div>
             <div class="value" data-wind>TBD</div>
           </div>
-          <div class="detail">
+          <div class="detail bordered">
             <div class="title">
               Temperature
             </div>
-            <div class="value bordered" data-temperature>TBD</div>
+            <div class="value" data-temperature>TBD</div>
           </div>
           <div class="detail">
             <div class="title">
